# parchlinux-quickstart

./: CMakeLists.txt  README.md  main.cpp  main.qml  parch-quickstart.conf  parch-quickstart.desktop
